--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <title>My Test Website</title>
-  <body bgcolor=orange>
+  <body bgcolor=green>
     <h1>Hello World!</h1>
     <p>I'll add more stuff here later.
   </body>
