--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   <title>My Test Website</title>
   <body bgcolor=green>
-    <h1>Hello World!</h1>
-    <p>I'll add more stuff here later.
+    <h1>Medicine</h1>
+    <img src = "https://s-media-cache-ak0.pinimg.com/originals/2b/11/eb/2b11eb49b045ca744ef70a93fe509eb5.jpg">
+    <p>The Past
+    <p>The Present
+    <p>The Future
   </body>
 </html>
