--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <title>My Test Website</title>
   <body bgcolor=blue>
     <h1>Orcas</h1>
-    <p>Orcinus Orca</p>
+    <p><i>Orcinus Orca</i></p>
     <p>Learn more<a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification"> here.</a></p>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <p>
