--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <title>My Test Website</title>
-  <body bgcolor=silver>
+  <body bgcolor=LightSeaGreen>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <p>Learn more<a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification"> here.</a></p>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
-    <h1>Fast Facts</h1>
-    <h1>Threats</h1>
+    <h3>Fast Facts</h3>
+    <h3>Threats</h3>
     
   </body>
 </html>
