--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <h3>Fast Facts</h3>
+    <ul>
+      <p>Orcas...</p>
+      <li>gained their common name from sailors, who witnessed them preying on larger whales<li>
+      <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to "assasin whale"</li>
+    </ul>
     <h3>Threats</h3>
     
   </body>
