--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <h3>Fast Facts</h3>
     <ul>
       <p>Orcas...</p>
-      <li>gained their common name from sailors, who witnessed them preying on larger whales<li>
+      <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to "assasin whale"</li>
     </ul>
     <h3>Threats</h3>
+    <ol>
+      
     
   </body>
 </html>
