--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
       <p>Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
-      <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to "assasin whale"</li>
+      <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
     </ul>
     <h3>Threats</h3>
     <ol>
