--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-  <title>My Test Website</title>
+  <head>
+  <title>Intro to Orca Whale Studies</title>
+  </head>
   <body bgcolor=LightSeaGreen>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
@@ -12,7 +14,7 @@
     </ul>
     <h3>Threats</h3>
     <ol>
-      
+ <     
     
   </body>
 </html>
