--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   </head>
   <body bgcolor=LightSeaGreen>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
+    
+    <p><u>About the author: </u></p>
     <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <h3>Fast Facts</h3>
