--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   </head>
   <body bgcolor=LightSeaGreen>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
-    <h2><u>About the author: </u></h2>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <h3>Fast Facts</h3>
     <ul>
@@ -13,7 +12,7 @@
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
     </ul>
     <h3>Threats</h3>
-    <ol>  
+    <ol>  Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high, and entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. 
       
      <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
   </body>
