--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
     </ul>
     <h3>Threats</h3>
-    <ol>  Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high, and entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. 
+    <ol>  Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. 
       
      <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
   </body>
