--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <h3>Fast Facts</h3>
+    <img src = "file:///C:\Programs\Downloads\KillerWhales1.jpg">
     <ul>
       <p>Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
     </ul>
     <h3>Threats</h3>
-    <ol>  Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
+    <p>Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
       
      <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
   </body>
