--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <h3>Threats</h3>
     <p>Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
       
-    <h3>Types of Orcas</h3>
+    <h3>Types of Orcas
     <br>Read more here: <a href="http://us.whales.org/wdc-in-action/meet-different-types-of-orca">http://us.whales.org/wdc-in-action/meet-different-types-of-orca</a></p>
+    </br></h3>
     <ol>
       <li>Resident Whales
         <ul>
