--- a/index.html
+++ b/index.html
@@ -17,7 +17,27 @@
       
     <h3>Types of Orcas</h3>
     Read more here: <a href="http://us.whales.org/wdc-in-action/meet-different-types-of-orca">http://us.whales.org/wdc-in-action/meet-different-types-of-orca</a></p>
-    <ol>
+    <table width ='100% border=1px cellspacing=0>
+      <tr>
+          <th>Type</th>
+          <th>Diet</th>
+          <th>Qualities</th>
+          <th>Habits</th>
+      </tr>
+      <tr>
+          <th>Resident</th>
+          <th>Fish</th>
+          <th><ol>
+                   <li>Vocal
+                   <ul>
+                   <li>Different dialects across pods
+                   </ul>
+                   <li>Rounded dorsal fin tip
+                   </ul></th>
+          <th>Habits</th>
+      </tr>             
+                   
+  <ol>
       <li>Resident Whales
         <ul>
           <li>Southern Resident: Puget Sound Orcas
