--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                    </ul></th>
           <th>Habits</th>
       </tr>             
+                   </table>
                    
   <ol>
       <li>Resident Whales
