--- a/index.html
+++ b/index.html
@@ -26,30 +26,20 @@
       </tr>
       <tr>
           <th>Resident</th>
-          <th>Fish</th>
-          <th><ol>
-                   <li>Vocal
-                   <ul>
-                   <li>Different dialects across pods
-                   </ul>
-                   <li>Rounded dorsal fin tip
+          <th><ul>Fish</ul></th>
+          <th>
+            <ul>
+              <li>Vocal
+                <ol>
+                  <li>Different dialects across pods
+                </ol>
+              <li>Rounded dorsal fin tip
                    </ul></th>
-          <th>Habits</th>
+                   <th><ul>Travel in different pods</ul><th>
       </tr>             
-                   </table>
+      </table>
                    
   <ol>
-      <li>Resident Whales
-        <ul>
-          <li>Southern Resident: Puget Sound Orcas
-          <li>Eat fish
-          <li>Travel in big pods
-          <li>Significantly more vocal
-            <ul>
-              <li>Different dialects between pods
-            </ul>
-          <li>Dorsal fins rounded at tip
-        </ul>
        <li>Transient Orcas
          <ul>
            <li>Eat marine mammals: seals, seal lions, dolphins and whales
