--- a/index.html
+++ b/index.html
@@ -34,20 +34,40 @@
                   <li>Different dialects across pods
                 </ol>
               <li>Rounded dorsal fin tip
-                   </ul></th>
-                   <th><ul>Travel in different pods</ul><th>
-      </tr>             
+            </ul></th>
+           <th>
+            <ul>
+              <li>Travel in different pods
+            </ul></th>
+           
+      </tr>       
+      <tr>
+          <th>Transient</th>
+          <th>
+            <ul>
+              <li>Marine mammals
+                <ol>
+                   <li>Seals
+                   <li>Sea Lions
+                   <li>Dolphins, Whales
+                </ol>
+           </ul></th>
+          <th>
+            <ul>
+              <li>Straight Dorsal fins
+            </ul>
+          <th>
+            <ul>
+              <li>Coordinate to catch prey
+              <li>Travel in groups less than 10
+                <ol>
+                  <li>Less permanent pods
+                </ol>
+              <li>Pacific Coast inhabitants 
+      </tr>                      
       </table>
                    
   <ol>
-       <li>Transient Orcas
-         <ul>
-           <li>Eat marine mammals: seals, seal lions, dolphins and whales
-           <li>Coordinate to catch prey
-           <li>Straight tips
-           <li>Travel in groups less than 10; less permanent pods
-           <li>Pacific Coast inhabitants 
-         </ul>
        <li>Offshore Orcas
          <ul>
            <li>Eat schooling fish, sometimes sharks
