--- a/index.html
+++ b/index.html
@@ -26,44 +26,45 @@
       </tr>
       <tr>
           <th>Resident</th>
-          <th><ul>Fish</ul></th>
+          <th>Fish</th>
           <th>
-            <ul>
+            <ol>
               <li>Vocal
                 <ol>
                   <li>Different dialects across pods
                 </ol>
               <li>Rounded dorsal fin tip
-            </ul></th>
+            </ol></th>
            <th>
-            <ul>
+            <ol>
               <li>Travel in different pods
-            </ul></th>
+            </ol></th>
            
       </tr>       
       <tr>
           <th>Transient</th>
           <th>
-            <ul>
+            <ol>
               <li>Marine mammals
-                <ol>
+                <ul>
                    <li>Seals
                    <li>Sea Lions
                    <li>Dolphins, Whales
-                </ol>
-           </ul></th>
+                </ul>
+           </ol></th>
           <th>
-            <ul>
+            <ol>
               <li>Straight Dorsal fins
-            </ul>
+            </ol>
           <th>
-            <ul>
+            <ol>
               <li>Coordinate to catch prey
               <li>Travel in groups less than 10
-                <ol>
+                <ul>
                   <li>Less permanent pods
-                </ol>
+                </ul>
               <li>Pacific Coast inhabitants 
+            </ol></th>
       </tr>                      
       </table>
                    
