--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
                 </ul>
               <li>Rounded dorsal fin tip
             </ol></th>
-           <th>
-              <li>Travel in different pods
-           </th>
+           <th>Travel in different pods</th>
            
       </tr>       
       <tr>
@@ -51,9 +49,7 @@
                    <li>Dolphins, Whales
                 </ul>
            </ol></th>
-          <th>
-              <li>Straight Dorsal fins
-          <th>
+          <th>Straight Dorsal fins<th>
             <ol>
               <li>Coordinate to catch prey
               <li>Travel in groups less than 10
