--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg" style="width:1060px;height:320px;">
     <h3>Fast Facts</h3>
-    <img src = "file:///C:Programs\KillerWhales1.jpg" style="width:500px;height:200px;">
+    <img src = "file:///C:Programs\Downloads\KillerWhales1.jpg" style="width:500px;height:200px;">
     <ul>
       <p>Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
