--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
       
   <h3>Orca Noises</h3>
   <p><ol>
-    <li>Resident/Transient Orca Vocals
+    <li>Resident/Transient Orca Vocals<br>
         <audio controls>
           <source src="Resident-killer-whale-1.mp3" type="audio/mp3">
          </audio>
-    <li>Offshore Orca Vocals
+    <li>Offshore Orca Vocals<br>
         <audio controls>
           <source src="Offshore-killer-whale.mp3" type="audio/mp3">
          </audio>  
