--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <audio controls>
           <source src="Offshore-killer-whale.mp3" type="audio/mp3">
          </audio>  
-  <a href = "https://www.youtube.com/watch?v=r1ZkkHesyjg">https://www.youtube.com/watch?v=r1ZkkHesyjg</a>
+    <li><a href = "https://www.youtube.com/watch?v=r1ZkkHesyjg">https://www.youtube.com/watch?v=r1ZkkHesyjg</a>
   </ol>
         
     <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
