--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
   <title>Intro to Orca Whale Studies</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body bgcolor=LightSeaGreen>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
