--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         <audio controls>
           <source src="Offshore-killer-whale.mp3" type="audio/mp3">
          </audio>  
-    <li><a href = "https://www.youtube.com/watch?v=r1ZkkHesyjg">https://www.youtube.com/watch?v=r1ZkkHesyjg</a>
+    <li>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/r1ZkkHesyjg?ecver=1" frameborder="0" allowfullscreen></iframe>
   </ol>
         
     <p>Learn more <a href="https://seaworld.org/en/animal-info/animal-infobooks/killer-whale/scientific-classification">here.</a></p>
