--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       <p>Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
+      <li>Orcas are very social creatures
+        <li>Orcas have various behaviors with attached significance
+        <dl>
+          <dt>Breaching</dt>
+          <dd>Rise and break through the surface of the water</dd>
+          <dt>Blows</dt>
+          <dd>expelling air through blow hole</dd>
+       </dl>
     </ul>
     <h3>Threats</h3>
     <p>Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
