--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
       <li>Orcas are very social creatures
-        <li>Orcas have various behaviors with attached significance
+        <li>Orcas have various behaviors with attached significance<br>
+          Orca behaviors explained <a href = "http://whalespotter.com.au/?page_id=261"></a>
         <dl>
           <dt>Breaching</dt>
           <dd>Rise and break through the surface of the water</dd>
