--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
       <li>Orcas are very social creatures
-        <li>Orcas have various behaviors with attached significance<br> 
+        <li>Orcas have various behaviors with attached significance, for example<br> 
         <dl>
-          <dt>Breaching</dt>
+          <dt>Breaching:</dt>
           <dd>Rise and break through the surface of the water</dd>
           <dt>Blows</dt>
-          <dd>expelling air through blow hole</dd>
+          <dd>Expelling air through blow hole</dd>
        </dl>
        <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a>
     </ul>
