--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <dt>Blows:</dt>
           <dd>Expelling air through blow hole</dd>
        </dl>
+       <li><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/lfat0eJMpPA?ecver=1" frameborder="0" allowfullscreen></iframe>
        <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a>
     </ul>
     <h3>Threats</h3>
