--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
           <dt>Blows:</dt>
           <dd>Expelling air through blow hole</dd>
        </dl>
-       <li><br>
+       <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lfat0eJMpPA?ecver=1" frameborder="0" allowfullscreen></iframe>
-       <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a>
     </ul>
     <h3>Threats</h3>
     <p>Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
