--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <li>Orcas have various behaviors with attached significance, for example,<br> 
         <dl>
           <dt>Breaching:</dt>
-          <dd>Rise and break through the surface of the water</dd>
+          <dd>Rise and break through the surface of the water.</dd>
           <dt>Blows:</dt>
-          <dd>Expelling air through blow hole</dd>
+          <dd>Expelling air through the blow hole.</dd>
        </dl>
        <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lfat0eJMpPA?ecver=1" frameborder="0" allowfullscreen></iframe>
