--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Intro to Orca Whale Studies</title>
     <link rel="stylesheet" type="text/css" href="index.css">
   </head>
-  <body bgcolor=LightSeaGreen>
+  <body>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg" style="width:1060px;height:320px;">
     <h3>Fast Facts</h3>
