--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h3>Fast Facts</h3>
     <img src = "KillerWhales1.jpg" style="width:500px;height:200px;">
     <ul>
-      <p>Orcas...</p>
+      <p id="fastfacts">Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
       <li>have a Spanish translation for their common name, <i>ballena asesina</i>, which translates to <i>"assassin whale"</i></li>
       <li>Orcas are very social creatures
