--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
     <h3>Fast Facts</h3>
-    <img src = "KillerWhales1.jpg">
+    <img id="Pic2" src = "KillerWhales1.jpg">
     <ul>
       <p id="fastfacts">Orcas...</p>
       <li>gained their common name from sailors, who witnessed them preying on larger whales</li>
