--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       
     <h3>Types of Orcas</h3>
     Read more here: <a href="http://us.whales.org/wdc-in-action/meet-different-types-of-orca">http://us.whales.org/wdc-in-action/meet-different-types-of-orca</a></p>
-    <table width='100%' border=1px cellspacing=0>
+    <table id="table">
       <tr>
           <th>Type</th>
           <th>Diet</th>
