--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Orcas:<i> Orcinus Orca</i></h1>
     <img src = "http://da15bdaf715461308003-0c725c907c2d637068751776aeee5fbf.r7.cf1.rackcdn.com/2f33b091e6234f0fb4a3e41e2968608c_pic-sw-killer-whale-scientific-classification-07--940x320.jpg">
-    <h3>Fast Facts</h3>
+    <h3><u>Fast Facts</u></h3>
     <img id="Pic2" src = "KillerWhales1.jpg">
     <ul>
       <p id="fastfacts">Orcas...</p>
@@ -23,10 +23,10 @@
        <li>Orca behaviors explained: <a href = "http://whalespotter.com.au/?page_id=261">http://whalespotter.com.au/?page_id=261</a><br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/lfat0eJMpPA?ecver=1" frameborder="0" allowfullscreen></iframe>
     </ul>
-    <h3>Threats</h3>
+    <h3><u>Threats</u></h3>
     <p>Common threats to Orcas are often not given enough attention. In the 1900s, whale capturing reached a high. Entertainment companies, such as Sea World, captured Orcas from the wild to train them and perform for the public. In 1976, however, this trend began declining- Sea World agreed to end this capture cycle. Toxic chemicals, leading to lack of food, and the general inavailability of their regular diet, causes a major distress among Orca whale researchers. 
       
-    <h3>Types of Orcas</h3>
+    <h3><u>Types of Orcas</u></h3>
     <p id="ReadMore">Read more here: <a href="http://us.whales.org/wdc-in-action/meet-different-types-of-orca">http://us.whales.org/wdc-in-action/meet-different-types-of-orca</a></p>
     <table width='100%' border=1px cellspacing=0>
       <tr>
@@ -87,7 +87,7 @@
       </tr>
       </table>
       
-  <h3>Orca Noises</h3>
+    <h3><u>Orca Noises</u></h3>
   <p><ol>
     <li>Resident/Transient Orca Vocals<br>
         <audio controls>
